# fastapi-mall

./: .env  .gitignore  database.py  docker-compose.yml  main.py
backend/: Dockerfile  pyproject.toml
backend/app/: alembic.ini  database.py  main.py  setting.py
backend/app/alembic/: env.py
backend/app/alembic/versions/: 703a042171b7_.py
backend/app/apis/: deps.py  main.py
backend/app/apis/routers/: item.py  upload.py  user.py
backend/app/model/: __init__.py  items.py  public.py  users.py
backend/app/schemas/: items.py  user.py
backend/app/services/: user.py  utils.py
frontend/: package-lock.json  package.json
frontend/src/app/: page.tsx
mall/: item.py  upload.py  user.py
model/: items.py  public.py  users.py
schemas/: user.py
services/: user.py  utils.py
