[tool.poetry]
name = "fastapiproject"
version = "0.1.0"
description = "fastapi-mall"
authors = ["Wujunkui"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.110.1"
aiofiles = "^23.2.1"
alembic = "^1.13.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
sqlmodel = "^0.0.16"
bcrypt = "4.0.1"
loguru = "^0.7.2"
email-validator = "^2.1.1"
python-multipart = "^0.0.9"
uvicorn = {extras = ["standard"], version = "^0.29.0"}
pydantic-settings = "^2.2.1"
psycopg-binary = "^3.1.18"
psycopg = "^3.1.18"


[tool.poetry.group.dev.dependencies]
alembic = "^1.13.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
